// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/access-stats/AccessStatsItem should render access stats of preview type properly with modal 1`] = `
<li
  className="access-stats-item"
>
  <PlainButton
    className="access-stats-item-content"
    onClick={[Function]}
    value={1}
  >
    <IconEye
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Previews"
        id="boxui.accessStats.accessStatsPreviews"
      />
    </span>
    <FormattedNumber
      value={100}
    />
  </PlainButton>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats of type properly 1`] = `
<li
  className="access-stats-item"
>
  <span
    className="access-stats-item-content"
  >
    <IconEye
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Previews"
        id="boxui.accessStats.accessStatsPreviews"
      />
    </span>
    <FormattedNumber
      value={100}
    />
  </span>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats of type properly 2`] = `
<li
  className="access-stats-item"
>
  <span
    className="access-stats-item-content"
  >
    <IconEye
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Views"
        id="boxui.accessStats.accessStatsViews"
      />
    </span>
    <FormattedNumber
      value={100}
    />
  </span>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats of type properly 3`] = `
<li
  className="access-stats-item"
>
  <span
    className="access-stats-item-content"
  >
    <IconDownloadSolid
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Downloads"
        id="boxui.accessStats.accessStatsDownloads"
      />
    </span>
    <FormattedNumber
      value={100}
    />
  </span>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats of type properly 4`] = `
<li
  className="access-stats-item"
>
  <span
    className="access-stats-item-content"
  >
    <IconComment
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Comments"
        id="boxui.accessStats.accessStatsComments"
      />
    </span>
    <FormattedNumber
      value={100}
    />
  </span>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats of type properly 5`] = `
<li
  className="access-stats-item"
>
  <span
    className="access-stats-item-content"
  >
    <IconPencilSolid
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Edits"
        id="boxui.accessStats.accessStatsEdits"
      />
    </span>
    <FormattedNumber
      value={100}
    />
  </span>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats with a plus when count overflowed 1`] = `
<li
  className="access-stats-item"
>
  <PlainButton
    className="access-stats-item-content"
    onClick={[Function]}
    value={1}
  >
    <IconEye
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Previews"
        id="boxui.accessStats.accessStatsPreviews"
      />
    </span>
    <FormattedNumber
      value={100}
    />
    +
  </PlainButton>
</li>
`;

exports[`features/access-stats/AccessStatsItem should render access stats with a zero count 1`] = `
<li
  className="access-stats-item"
>
  <span
    className="access-stats-item-content"
  >
    <IconEye
      color="#2a62b9"
      height={10}
      width={14}
    />
    <span
      className="access-stats-label"
    >
      <FormattedMessage
        defaultMessage="Previews"
        id="boxui.accessStats.accessStatsPreviews"
      />
    </span>
    <FormattedNumber
      value={0}
    />
  </span>
</li>
`;
